name:                miso-table
version:             0.1.0.0
synopsis:            test table
description:         testing miso
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable miso-table
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Werror
  if impl(ghcjs)
    ghc-options: -dedupe

  build-depends:       base
                     , miso >= 0.14.0.0
                     , ghcjs-base
                     , aeson
                     , text
                     , bytestring
                     --, comonad


  default-extensions:  AutoDeriveTypeable
                       BangPatterns
                       BinaryLiterals
                       ConstraintKinds
                       DataKinds
                       DefaultSignatures
                       DeriveDataTypeable
                       DeriveFoldable
                       DeriveFunctor
                       DeriveGeneric
                       DeriveTraversable
                       DoAndIfThenElse
                       EmptyDataDecls
                       ExistentialQuantification
                       FlexibleContexts
                       FlexibleInstances
                       FunctionalDependencies
                       GADTs
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       MonadFailDesugaring
                       MultiParamTypeClasses
                       MultiWayIf
                       NamedFieldPuns
                       NoImplicitPrelude
                       OverloadedStrings
                       PartialTypeSignatures
                       PatternGuards
                       PolyKinds
                       RankNTypes
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       TypeFamilies
                       TypeOperators
                       TypeSynonymInstances
                       ViewPatterns