name:                react-flux-table
version:             0.1.0.0
synopsis:            test table
description:         testing react-flux
category:            Web
build-type:          Simple
cabal-version:       >=1.10


extra-source-files:
    Makefile
    html/*.html



executable react-flux-table
   ghc-options: -Wall
   cpp-options: -DGHCJS_BROWSER
   default-language: Haskell2010
   hs-source-dirs: src
   main-is: Main.hs
   build-depends: base
                , react-flux >= 1.3 && < 1.4
                , deepseq
                , text
                , ghcjs-base
                , time