name:                reflex-frp-table
version:             0.1.0.0
synopsis:            test table
description:         testing reflex
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable reflex-frp-table
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -O2
  if impl(ghcjs)
    ghc-options: -dedupe

  build-depends:       base
                     , reflex
                     , reflex-dom
                     , string-class
                     , text
                     , transformers
                     , safe
                     , aeson
                     , bytestring
