name: react-flux-spec
version: 0.0.0
build-type: Simple
cabal-version: >= 1.9

executable react-flux-spec
   ghc-options: -Wall
   hs-source-dirs: .
   main-is: Main.hs
   other-modules: TestClientSpec, Spec
   build-depends: base
                , hspec
                , webdriver
                , hspec-webdriver >= 1.2
                , directory
                , process
                , transformers
                , text
                , time
